--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,9 @@
 name: Release Charts
 
 on:
-  push:
-    branches:
-    - master
+  release:
+    types:
+      - published
 
 jobs:
   release:
@@ -26,7 +26,8 @@ jobs:
         helm init --client-only
     - name: Add dependency chart repos
       run: |
-        helm repo add stable https://charts.helm.sh/stable
+        helm repo add stable https://charts.helm.sh/stable &&
+        helm repo add bitnami https://charts.bitnami.com/bitnami
 
     - name: Run chart-releaser
       uses: helm/chart-releaser-action@v1.2.1
