--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,27 +9,29 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v1
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
-    - name: Configure Git
-      run: |
-        git config user.name "$GITHUB_ACTOR"
-        git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+      - name: Configure Git
+        run: |
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
-    # See https://github.com/helm/chart-releaser-action/issues/6
-    - name: Install Helm
-      run: |
-        curl -sSLo get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get
-        chmod 700 get_helm.sh
-        ./get_helm.sh
-        helm init --client-only
-    - name: Add dependency chart repos
-      run: |
-        helm repo add stable https://charts.helm.sh/stable &&
-        helm repo add bitnami https://charts.bitnami.com/bitnami
+      - name: Install Helm
+        uses: azure/setup-helm@v1
+        with:
+          version: v3.4.0
 
-    - name: Run chart-releaser
-      uses: helm/chart-releaser-action@v1.2.1
-      env:
-        CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      - name: Add dependency chart repos
+        run: |
+          helm repo add stable https://charts.helm.sh/stable &&
+          helm repo add bitnami https://charts.bitnami.com/bitnami
+
+      - name: Run chart-releaser
+        uses: helm/chart-releaser-action@v1.2.1
+        with:
+          charts_dir: charts
+        env:
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
