--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,9 +29,30 @@ jobs:
           helm repo add stable https://charts.helm.sh/stable &&
           helm repo add bitnami https://charts.bitnami.com/bitnami
 
-      - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.2.1
-        with:
-          charts_dir: charts
-        env:
-          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      - name: Package and upload helm chart
+          run: |
+            # donwload helm chart releaser
+            curl -sSLo cr.tar.gz "https://github.com/helm/chart-releaser/releases/download/v1.2.1/chart-releaser_1.2.1_linux_amd64.tar.gz"
+            tar -xzf cr.tar.gz
+            rm -f cr.tar.gz
+            owner=$(cut -d '/' -f 1 <<< "$GITHUB_REPOSITORY")
+            repo=$(cut -d '/' -f 2 <<< "$GITHUB_REPOSITORY")
+            # package chart
+            ./cr package charts/$repo
+            # upload chart to github relases
+            ./cr upload \
+                --owner "$owner" \
+                --git-repo "$repo" \
+                --token "${{ secrets.GITHUB_TOKEN }}" \
+                --release-name-template "{{ .Version }}"
+            # update index and push to github pages
+            git config user.email "$owner@users.noreply.github.com"
+            git config user.name "$owner"
+            ./cr index \
+                --owner "$owner" \
+                --git-repo "$repo" \
+                --token "${{ secrets.GITHUB_TOKEN }}" \
+                --release-name-template "{{ .Version }}" \
+                --index-path ./index.yaml \
+                --charts-repo https://$owner.github.io/$repo \
+                --push
