--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,9 +22,16 @@ jobs:
       - name: Install Helm
         uses: azure/setup-helm@v1
         with:
-          version: v3.4.0
+          version: v3.8.0
 
-      - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.2.1
-        env:
-          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      - name: Add Qameta Repo
+        run: |
+          helm repo add --username ${{ secrets.SA_NAME }} --password ${{ secrets.SA_PASS }}  qameta-artifactory https://dl.qameta.io/artifactory/helm
+
+      - name: Install Publish Plugin
+        run: |
+          helm plugin install https://github.com/belitre/helm-push-artifactory-plugin --version v1.0.2
+          
+      - name: Publish Chart
+        run: |
+          helm push-artifactory charts/allure-testops qameta-artifactory --access-token ${{ secrets.SA_ACCESS_TOKEN }} --skip-reindex
