--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,27 +14,16 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
       - name: Configure Git
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-      - name: "Helm Package"
-        uses: draios/action-helm-tools@v1.0.1
-        with:
-          action: "package"
-        env:
-          CHART_DIR: charts/allure-testops
-          ARTIFACTORY_URL: https://dl.qameta.io:443/artifactory/helm/
-          ARTIFACTORY_USERNAME: ${{ secrets.ARTIFACTORY_USER }}
-          ARTIFACTORY_PASSWORD: ${{ secrets.ARTIFACTORY_PASS }}
-          CHART_VERSION: 3.193.0
+
       - name: "Helm publish"
-        uses: draios/action-helm-tools@v1.0.1
+        uses: qameta/artifactory-publisher@v1
         with:
-          action: "publish"
-        env:
-          CHART_DIR: charts/allure-testops
-          ARTIFACTORY_URL: https://dl.qameta.io:443/artifactory/helm/
-          ARTIFACTORY_USERNAME: ${{ secrets.ARTIFACTORY_USER }}
-          ARTIFACTORY_PASSWORD: ${{ secrets.ARTIFACTORY_PASS }}
-          CHART_VERSION: 3.193.0
+          endpoint: https://dl.qameta.io/artifactory/helm
+          accessToken: "${{ secrets.SA_ACCESS_TOKEN }}"
+          repoName: qameta
+          chart: charts/allure-testops
