--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
       - name: "Helm publish"
         uses: qameta/artifactory-publisher@v1
         with:
-          endpoint: https://dl.qameta.io/artifactory/helm
+          endpoint: https://dl.qameta.io:443/artifactory/helm/
           accessToken: "${{ secrets.SA_ACCESS_TOKEN }}"
           repoName: qameta
           chart: charts/allure-testops
